cluster-aggregator/src/section/snapshots/cluster_aggregator__section__update_strategy__tests__daemonset_update_strategy.snap
---
source: cluster-aggregator/src/section/update_strategy.rs
expression: "KubeUpdateStrategyV1::from_daemonset(&daemonset)"
---
{
  "strategy": {
    "type_": "RollingUpdate",
    "max_surge": 0,
    "max_unavailable": 1
  }
}
