cluster-aggregator/src/section/snapshots/cluster_aggregator__section__update_strategy__tests__deployment_update_strategy.snap
---
source: cluster-aggregator/src/section/update_strategy.rs
expression: "KubeUpdateStrategyV1::from_deployment(&deployment)"
---
{
  "strategy": {
    "type_": "Recreate"
  }
}
