cluster-aggregator/src/section/snapshots/cluster_aggregator__section__update_strategy__tests__statefulset_update_strategy.snap
---
source: cluster-aggregator/src/section/update_strategy.rs
expression: "KubeUpdateStrategyV1::from_statefulset(&statefulset)"
---
{
  "strategy": {
    "type_": "StatefulSetRollingUpdate",
    "partition": 1,
    "max_unavailable": 1
  }
}
